--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="hobby overwatch">
         <h3>Overwatch</h3>
         <p>Grant has been playing Overwatch since it came out in 2016. Despite not being very good at the game, he continues to hopelessly put in countless hours to try to get better.</p>
-        <img src="https://static.wikia.nocookie.net/overwatch_gamepedia/images/2/26/Pharah-portrait.png/revision/latest?cb=20160620014608">
+        <img src="https://res.cloudinary.com/lmn/image/upload/c_limit,h_360,w_640/e_sharpen:100/f_auto,fl_lossy,q_auto/v1/gameskinnyc/p/h/a/pharah-c09f6.jpg">
         <iframe width="500" height="275" src="https://www.youtube.com/embed/ks-mLJS0pe8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>The picture above is Pharah, Grant's favorite character in the game. She has a jetpack and rocket launcher. The video on the right shows her in action.</p>
       </div>
