--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       
 
-      <a href="file:///C:/Users/Granty/Documents/Job%20Stuff/Resumes/Grant%20Li%20-%20Resume.pdf"><p>Resume</p></a> <!-- might need to fix this later -->
+      <a href="Grant Li - Resume.pdf"><p>Resume</p></a> <!-- might need to fix this later -->
     </section>
     <section id="contact">
       <h1>Contact</h1>
