--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <section id="about">
       <h1>About</h1>
-      <p>Grant is a really cool kid. He is struggling to make a website</p>
+      <p>Grant is originally from Acton, Massachussetts. After finishing high school, he enrolled at the University of Southern California in Los Angeles, California and studied Business Administration. For the next 5 years he worked in investing roles at Wells Fargo and Guggenheim Partners before deciding he needed a career change.</p>
       <img src="https://media-exp1.licdn.com/dms/image/C5603AQGBN7_20Ixwrw/profile-displayphoto-shrink_800_800/0/1517480847758?e=1628726400&v=beta&t=n0K2e02btFjP1JxYJsWgH9xYPaEMGUN6zzp2aHp3yxY">
       <h2>Hobbies</h2>
       <p>Grant's Hobbies Incude:</p>
@@ -42,7 +42,7 @@
       </div>
       
 
-      <a href="Grant Li - Resume.pdf"><p>Resume</p></a> <!-- might need to fix this later -->
+      <p>Click the following link to download Grant's resume</p><a href="Grant Li - Resume.pdf"><p>Resume</p></a>
     </section>
     <section id="contact">
       <h1>Contact</h1>
